Fixed overflowing menu bar.
Former-commit-id: 3fde861b0f18f42a0be958dfb79d6144960b69d3

--- a/intermine/webapp/main/resources/webapp/webapp.css
+++ b/intermine/webapp/main/resources/webapp/webapp.css
@@ -103,7 +103,7 @@ ul#nav{margin-left: 30px;width:650px}
 ul#nav li{float:left;margin-right: 3px;text-align: center}
 ul#nav a{
 	float:left;
-	width:9em;
+	width:8em;
 	text-decoration:none;
 	color: #5C0075;
 	font: Arial,sans-serif;
